Mark the start of the rewrite